# kafka

./: .env  Dockerfile.order-api  Dockerfile.processor-api  README.md  client_simulator.py  docker-compose.yml  port_fzd.ps1  port_fzd.sh  pyproject.toml
app/: api.py  order_processor.py  processor_api.py
kubernetes/: dashboard-working.yaml  ingress.yaml  kafka.yaml  portainer-simple.yaml
